# axon-native

./: .gitignore  Cargo.toml  README.md  index.node
resources/test_files/state/: identity.json  load_state.json  save_state.json
resources/test_files/state/parent_state/: state.json
src/: axonmessage.rs  bindings.rs  command.rs  handshake.rs  idenity.rs  init.rs  lib.rs  record.rs  serial.rs  state.rs
