[package]
name = "axon"
version = "0.1.0"
authors = ["Bader Youssef <ibnbassem@gmail.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "axon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.3"
serialport = "3.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "0.2.36"
rand = "0.4"
hex = "0.4.0"
